[project]
name = "agentic-rag-mcp-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.9.2",
    "langchain-groq>=0.3.4",
    "langchain-mcp-adapters>=0.1.8",
    "langgraph>=0.5.0",
    "mysql-connector-python>=9.3.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.41",
]
